@@ -18,6 +18,7 @@
 
 (gnc:module-load "gnucash/gnome-utils" 0)
 (gnc:module-load "gnucash/report/report-system" 0)
+(gnc:module-load "gnucash/report/utility-reports" 0)
 
 (export gnc:report-edit-options)
 (export gnc:report-menu-setup)
@@ -119,4 +120,12 @@
   ;; push reports (new items added on top of menu)
   (gnc:add-report-template-menu-items)
 
+  ;; the Welcome to GnuCash "extravaganza" report
+  (gnc:add-extension 
+   (gnc:make-menu-item 
+    (N_ "Welcome Sample Report")
+    (N_ "Welcome-to-GnuCash report screen")
+    (list gnc:menuname-reports gnc:menuname-utility "")
+    (lambda (window)
+      (gnc:main-window-open-report (gnc:make-welcome-report) window))))
 )
